# designPatterns

./: .gitignore  readme.md
331.Skeet/: DrawingStrat.h  bird.cpp  bird.h  birdSpawner.h  drawingStrat.h  skeet.cpp  skeet.h
W01-objectCreation/331.Skeet/: bird.h  factory.h  game.cpp  skeet.cpp
W02/: feedback.txt
objectCreation-W01/331.Skeet/: CMakeLists.txt
w01-objectCreation/: birdFactory-Psudo.txt
w03-algorithmAbstraction/: 331.Assessment.xlsx
